z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   height: fit-content;
   padding-bottom: 10px;
   transition: all 200ms ease-in-out;
+  z-index: 999;
 }
 *::selection {
     color: gold;
